--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   ],
   "main": "flip-clock.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.3.1"
+    "polymer": "Polymer/polymer#~0.3.1",
+    "moment": "~2.7.0"
   },
   "homepage": "https://github.com/Granze/flip-clock",
   "authors": [
