--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,8 @@
   ],
   "main": "flip-clock.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.3.1",
-    "moment": "~2.7.0"
+    "moment": "~2.8.3",
+    "polymer": "~0.4.1"
   },
   "homepage": "https://github.com/Granze/flip-clock",
   "authors": [
