--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "flip-clock",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "keywords": [
     "polymer",
     "web-components"
@@ -26,6 +26,8 @@
     "bower_components",
     "../",
     "test",
-    "tests"
+    "tests",
+    ".gitignore",
+    ".editorconfig"
   ]
 }
