--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "flip-clock",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "keywords": [
     "polymer",
     "web-components"
@@ -8,10 +8,10 @@
   "main": "flip-clock.html",
   "dependencies": {
     "moment": "~2.10.0",
-    "polymer": "Polymer/polymer#v0.8.0-rc.6"
+    "polymer": "Polymer/polymer#v0.9.0"
   },
   "devDependencies": {
-    "iron-doc-viewer": "PolymerElements/iron-doc-viewer#^0.8.6",
+    "iron-doc-viewer": "PolymerElements/iron-doc-viewer#^0.9.0",
     "web-component-tester": "*"
   },
   "homepage": "https://github.com/Granze/flip-clock",
