--- a/bower.json
+++ b/bower.json
@@ -8,11 +8,10 @@
   "main": "flip-clock.html",
   "dependencies": {
     "moment": "~2.10.0",
-    "polymer": "Polymer/polymer#v0.9.0"
+    "polymer": "Polymer/polymer#^0.9.0"
   },
   "devDependencies": {
-    "iron-doc-viewer": "PolymerElements/iron-doc-viewer#^0.9.0",
-    "web-component-tester": "*"
+    "iron-doc-viewer": "PolymerElements/iron-doc-viewer#^0.9.0"
   },
   "homepage": "https://github.com/Granze/flip-clock",
   "authors": [
