--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "polymer": "Polymer/polymer#^1.0.0"
   },
   "devDependencies": {
-    "iron-doc-viewer": "PolymerElements/iron-doc-viewer#^1.0.0"
+    "iron-component-page": "PolymerElements/iron-component-page#~1.0.4"
   },
   "homepage": "https://github.com/Granze/flip-clock",
   "authors": [
