--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ language: node_js
 node_js:
   - "0.12"
 before_install:
-  - "npm install -g bower"
+  - "npm install -g bower web-component-tester"
   - "bower install"
-  - "npm install -g web-component-tester"
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 script: "wct"
