--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: node_js
 node_js:
-  - "0.12"
+  - '4'
+  - '5'
 before_install:
-  - "npm install -g bower web-component-tester"
-  - "bower install"
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-script: "wct"
+  - 'npm install -g bower web-component-tester'
+  - 'bower install'
+  - 'export DISPLAY=:99.0'
+  - 'sh -e /etc/init.d/xvfb start'
+script: 'wct'
