--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,22 @@
 {
   "name": "flip-clock",
-  "version": "1.2.5",
+  "version": "2.0.0",
   "keywords": [
     "polymer",
     "web-components"
   ],
   "main": "flip-clock.html",
   "dependencies": {
-    "moment": "~2.13.0",
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "moment": "^2.18.1"
   },
   "devDependencies": {
-    "test-fixture": "polymerelements/test-fixture#^1.1.0",
-    "iron-test-helpers": "polymerelements/iron-test-helpers#~1.2.3",
-    "iron-component-page": "polymerelements/iron-component-page#~1.1.2"
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
+  },
+  "resolutions": {
+    "polymer": "^2.0.0"
   },
   "homepage": "https://github.com/Granze/flip-clock",
   "authors": [
